# RemoteDisplayNDK-android

./: README.md
app/: build.gradle
app/src/main/jni/: CMakeLists.txt
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
